alignment fix

--- a/src/sass/sections/_projects.scss
+++ b/src/sass/sections/_projects.scss
@@ -24,6 +24,10 @@
       backdrop-filter: blur(13px);
       -webkit-backdrop-filter: blur(13px);
       border: 1px solid rgba(255, 255, 255, 1);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
 
       @include respond(phone) {
         margin-bottom: 4rem;
